# django-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  pytest.ini
hooks/: post_gen_project.py
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.txt  Dockerfile  LICENSE  Pipfile  Procfile  README.md  config.yaml  docker-compose.yml  entrypoint.sh  heroku.yml  manage.py  pyproject.toml  requirements.txt  start-dev.sh  start-nameko.sh  start.sh
{{cookiecutter.project_slug}}/config/: scheduler.py
{{cookiecutter.project_slug}}/contrib/: .env.sample
{{cookiecutter.project_slug}}/core/: admin.py  models.py  schema.py  serializers.py  sync.py  urls.py  views.py
{{cookiecutter.project_slug}}/core/management/commands/: create_admin.py
{{cookiecutter.project_slug}}/core/services/: __init__.py  providers.py  sample.py
{{cookiecutter.project_slug}}/core/tests/: test_serializers.py  test_views.py
{{cookiecutter.project_slug}}/services/: __init__.py  providers.py  sample.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: nameko.py  settings.py  urls.py  wsgi.py
