[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Django template for projects"
authors = ["Fabricio Nogueira <nogsantos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
tox = "^3.15.0"
pytest = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.1"
flake8-isort = "^3.0.0"
pytest-cookies = "^0.5.1"
sh = "^1.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
