[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
django = "==3.0.6"
djangorestframework = "==3.11.0"
django-cors-headers = "*"
django-extensions = "==2.2.5"
dj-database-url = "==0.5.0"
werkzeug = "==0.16.0"
python-decouple = "==3.1"
Unipath = "*"
"psycopg2-binary" = "==2.8.4"
gunicorn = "==19.9.0"
idna_ssl = "*"
requests = "==2.23.0"
pytz = "==2019.3"
drf-yasg = "*"
django-filter = "==2.2.0"
{% if cookiecutter.use_nameko == "y" -%}
nameko = "==2.12.0"
{%- endif %}
{% if cookiecutter.use_graphql == "y" -%}
graphene-django = "==2.9.0"
graphene-federation = "==0.0.3"
{%- endif %}

[tool.poetry.dev-dependencies]
tox = "^3.15.0"
pytest = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.1"
flake8-isort = "^3.0.0"
cookiecutter = "^1.7.2"
coverage = "==4.5.4"
model-bakery = "==1.0.1"
ipython = "==7.8.0"
ipykernel = "*"
jupyter = "*"
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
